force-app/main/default/objects/Offering__c/Offering__c.object-meta.xml
<CustomObject>
    <description>Capital-raise offering (fund or deal) that investors commit to and fund. Tracks raise targets, the eight-stage status lifecycle, overbooking, and the linked property.</description>
    <label>Offering</label>
    <nameField>
        <label>Offering Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Offerings</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>