force-app/main/default/objects/Offering__c/fields/Amount_Raised__c.field-meta.xml
<CustomField>
    <fullName>Amount_Raised__c</fullName>
    <description>Total capital raised to date for this offering. Maintained by Phase C automation; seeded with literal values in Phase A.</description>
    <inlineHelpText>Total funded capital raised for this offering. Updated by automation in a later phase.</inlineHelpText>
    <label>Amount Raised</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>