force-app/main/default/objects/Offering__c/fields/Cashon_Cash__c.field-meta.xml
<CustomField>
    <fullName>Cashon_Cash__c</fullName>
    <label>Cashon-Cash</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>