force-app/main/default/objects/Offering__c/fields/Closing_Date__c.field-meta.xml
<CustomField>
    <fullName>Closing_Date__c</fullName>
    <description>Date the offering closes to new commitments.</description>
    <inlineHelpText>Enter the date the offering stops accepting new commitments. Cannot be before the Launch Date.</inlineHelpText>
    <label>Closing Date</label>
    <type>Date</type>
</CustomField>