force-app/main/default/objects/Offering__c/fields/Committed_Investor_Count__c.field-meta.xml
<CustomField>
    <fullName>Committed_Investor_Count__c</fullName>
    <description>Number of distinct investors committed to this offering. Maintained by Phase C automation; seeded in Phase A.</description>
    <inlineHelpText>Count of committed investors for this offering. Updated by automation in a later phase.</inlineHelpText>
    <label>Committed Investor Count</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>