force-app/main/default/objects/Offering__c/fields/Distribution_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Schedule__c</fullName>
    <label>Distribution Schedule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>