force-app/main/default/objects/Offering__c/fields/Launch_Date__c.field-meta.xml
<CustomField>
    <fullName>Launch_Date__c</fullName>
    <description>Date the offering opens for fundraising.</description>
    <inlineHelpText>Enter the date the offering becomes available to investors.</inlineHelpText>
    <label>Launch Date</label>
    <type>Date</type>
</CustomField>