force-app/main/default/objects/Offering__c/fields/Minimum_Investment__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Investment__c</fullName>
    <description>Minimum capital an investor must commit to participate in this offering.</description>
    <inlineHelpText>Enter the minimum commitment amount in USD (e.g., 50000).</inlineHelpText>
    <label>Minimum Investment</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>