force-app/main/default/objects/Offering__c/fields/Offering_ID__c.field-meta.xml
<CustomField>
    <fullName>Offering_ID__c</fullName>
    <description>Human-readable auto-numbered identifier for the offering (e.g., O-119), distinct from the offering Name.</description>
    <displayFormat>O-{000}</displayFormat>
    <inlineHelpText>System-assigned offering identifier. Read-only.</inlineHelpText>
    <label>Offering ID</label>
    <type>AutoNumber</type>
</CustomField>