force-app/main/default/objects/Offering__c/fields/Overbook_Cap__c.field-meta.xml
<CustomField>
    <fullName>Overbook_Cap__c</fullName>
    <description>Maximum capital that may be raised, calculated as Target Raise multiplied by the Overbook Multiplier.</description>
    <formula>Target_Raise__c * Overbook_Multiplier__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Automatically calculated: Target Raise x Overbook Multiplier.</inlineHelpText>
    <label>Overbook Cap</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>