force-app/main/default/objects/Offering__c/fields/Overbook_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Overbook_Multiplier__c</fullName>
    <defaultValue>1.25</defaultValue>
    <description>Factor applied to the Target Raise to determine the maximum allowable oversubscription cap.</description>
    <inlineHelpText>Enter the overbook factor (e.g., 1.25 allows raising up to 125% of target).</inlineHelpText>
    <label>Overbook Multiplier</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>