force-app/main/default/objects/Offering__c/fields/Price_Per_Share__c.field-meta.xml
<CustomField>
    <fullName>Price_Per_Share__c</fullName>
    <label>Price Per Share</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>