force-app/main/default/objects/Offering__c/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The real-estate property this offering raises capital to acquire or operate.</description>
    <inlineHelpText>Link the property associated with this offering.</inlineHelpText>
    <label>Property</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Offerings</relationshipLabel>
    <relationshipName>Offerings</relationshipName>
    <type>Lookup</type>
</CustomField>