force-app/main/default/objects/Offering__c/fields/Raised_Pct__c.field-meta.xml
<CustomField>
    <fullName>Raised_Pct__c</fullName>
    <description>Proportion of the Target Raise that has been raised to date.</description>
    <formula>IF(Target_Raise__c &gt; 0, Amount_Raised__c / Target_Raise__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Automatically calculated: Amount Raised divided by Target Raise.</inlineHelpText>
    <label>Raised %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>