force-app/main/default/objects/Offering__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Current stage of the offering across its eight-stage fundraising and activation lifecycle.</description>
    <inlineHelpText>Advance the offering through its lifecycle from Draft to Closed Funded.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Pre-Launch</fullName>
            </value>
            <value>
                <fullName>Active Fundraising</fullName>
            </value>
            <value>
                <fullName>Fully Subscribed</fullName>
            </value>
            <value>
                <fullName>Signatures Pending</fullName>
            </value>
            <value>
                <fullName>Ready to Activate</fullName>
            </value>
            <value>
                <fullName>Investment Active</fullName>
            </value>
            <value>
                <fullName>Closed Funded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>