force-app/main/default/objects/Offering__c/fields/Target_Raise__c.field-meta.xml
<CustomField>
    <fullName>Target_Raise__c</fullName>
    <description>Total capital the offering aims to raise from investors.</description>
    <inlineHelpText>Enter the target raise amount in USD.</inlineHelpText>
    <label>Target Raise</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>