force-app/main/default/objects/Offering__c/fields/Total_Committed__c.field-meta.xml
<CustomField>
    <fullName>Total_Committed__c</fullName>
    <description>Total committed capital across all commitments for this offering. Maintained by Phase C automation; seeded in Phase A.</description>
    <inlineHelpText>Aggregate committed capital for this offering. Updated by automation in a later phase.</inlineHelpText>
    <label>Total Committed</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>