force-app/main/default/objects/Offering__c/fields/Total_Shares__c.field-meta.xml
<CustomField>
    <fullName>Total_Shares__c</fullName>
    <label>Total Shares</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>