force-app/main/default/objects/Offering__c/fields/Transfers_Permitted__c.field-meta.xml
<CustomField>
    <fullName>Transfers_Permitted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether secondary share transfers are allowed for investments in this offering.</description>
    <inlineHelpText>Check to allow investors to transfer shares of this offering on the secondary market.</inlineHelpText>
    <label>Transfers Permitted</label>
    <type>Checkbox</type>
</CustomField>