force-app/main/default/objects/Offering__c/validationRules/Closing_Not_Before_Launch.validationRule-meta.xml
<ValidationRule>
    <fullName>Closing_Not_Before_Launch</fullName>
    <active>true</active>
    <description>Prevents Closing Date from being set earlier than Launch Date when both dates are populated. Factory-safe: only fires when both date fields have values.</description>
    <errorConditionFormula>AND(NOT(ISBLANK(Closing_Date__c)), NOT(ISBLANK(Launch_Date__c)), Closing_Date__c &lt; Launch_Date__c)</errorConditionFormula>
    <errorMessage>Closing Date cannot be before Launch Date.</errorMessage>
</ValidationRule>