force-app/main/default/objects/Offering__c/listViews/Active_Fundraising.listView-meta.xml
<ListView>
    <fullName>Active_Fundraising</fullName>
    <columns>NAME</columns>
    <columns>Offering_ID__c</columns>
    <columns>Target_Raise__c</columns>
    <columns>Amount_Raised__c</columns>
    <columns>Raised_Pct__c</columns>
    <columns>Closing_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active Fundraising</value>
    </filters>
    <label>Active Fundraising</label>
</ListView>