force-app/main/default/objects/Offering__c/listViews/All_Offerings.listView-meta.xml
<ListView>
    <fullName>All_Offerings</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Target_Raise__c</columns>
    <columns>Target_IRR__c</columns>
    <columns>Total_Committed__c</columns>
    <columns>Minimum_Investment__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Offerings</label>
</ListView>