force-app/main/default/objects/Offering__c/listViews/By_Status.listView-meta.xml
<ListView>
    <fullName>By_Status</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Target_Raise__c</columns>
    <columns>Amount_Raised__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Offerings by Status</label>
</ListView>