force-app/main/default/objects/Offering__c/listViews/Fully_Subscribed.listView-meta.xml
<ListView>
    <fullName>Fully_Subscribed</fullName>
    <columns>NAME</columns>
    <columns>Amount_Raised__c</columns>
    <columns>Committed_Investor_Count__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Fully Subscribed</value>
    </filters>
    <label>Fully Subscribed</label>
</ListView>